--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,10 @@ dependencies {
   implementation 'com.google.protobuf:protobuf-java:2.5.0'
 
   annotationProcessor 'org.projectlombok:lombok:1.18.2'
+  
   compileOnly 'org.projectlombok:lombok:1.18.2'
   testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
   testCompileOnly 'org.projectlombok:lombok:1.18.2'
 
-  testImplementation group: 'junit', name: 'junit', version: '4.12'
+  testImplementation 'junit:junit:4.12'
 }
